[ALF-848] Для отчёта "Реестр договоров" даты задаются как С ... ПО ...
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2501 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
@@ -1,8 +1,10 @@
 #<type name="lecm-contract-reports:contracts-list-report">
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u043e\u0442\u0447\u0435\u0442\u0430 \u043f\u043e\u0441\u043b\u0435
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=\u0414\u0430\u0442\u0430 \u043d\u0430\u0447\u0430\u043b\u0430 \u043e\u0442\u0447\u0435\u0442\u0430 \u0434\u043e
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430 \u043f\u043e\u0441\u043b\u0435
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=\u0414\u0430\u0442\u0430 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u043e\u0442\u0447\u0435\u0442\u0430 \u0434\u043e
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=\u041f\u0435\u0440\u043e\u0438\u0434 \u043d\u0430\u0447\u0430\u043b\u0430  \u0421
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=\u041f\u043e
+
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=\u041f\u0435\u0440\u0438\u043e\u0434 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f  \u0421
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=\u041f\u043e
+
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=\u0422\u043e\u043b\u044c\u043a\u043e \u0430\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u044b\u0435
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum.title=\u0421\u0443\u043c\u043c\u0430
 
