ALF-853 При переходе по тегу осуществляется переход не в базовый журнал
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2508 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/journal/menu/documents.menu.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/journal/menu/documents.menu.get_ru.properties
@@ -1,1 +1,1 @@
-lecm.documents.contracts.btn=\u041A\u043E\u043D\u0442\u0440\u0430\u043A\u0442\u044B
+lecm.documents.contracts.btn=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
