[+]: Форма последовательного согласования
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2539 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
@@ -36,4 +36,12 @@ listconstraint.lecm-al_approval-list-decision-constraint.APPROVED_WITH_REMARK=\u
 listconstraint.lecm-al_approval-list-decision-constraint.REJECTED_FORCE=\u041E\u0442\u043E\u0437\u0432\u0430\u043D \u0441 \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F
 listconstraint.lecm-al_approval-list-decision-constraint.APPROVED_FORCE=\u0421\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u0435 \u043F\u0440\u0438\u043D\u0443\u0434\u0438\u0442\u0435\u043B\u044C\u043D\u043E \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u043E
 
+lecm-al_approval-list-model.type.lecm-al_assignees-item.title=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0439
+lecm-al_approval-list-model.type.lecm-al_assignees-list.title=\u0421\u043F\u0438\u0441\u043E\u043A \u0441\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0445
 
+lecm-al_approval-list-model.property.lecm-al_assignees-item-order.title=\u2116 \u043F/\u043F
+lecm-al_approval-list-model.property.lecm-al_assignees-item-due-date.title=\u0421\u0440\u043E\u043A \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F
+lecm-al_approval-list-model.property.lecm-al_userName.title=\u0418\u043C\u044F \u043F\u043E\u043B\u044C\u0437\u043E\u0432\u0430\u0442\u0435\u043B\u044F
+
+lecm-al_approval-list-model.association.lecm-al_assignees-item-employee-assoc.title=\u0421\u043E\u0442\u0440\u0443\u0434\u043D\u0438\u043A
+lecm-al_approval-list-model.association.lecm-al_assignees-list-contains-assignees-item.title=\u0421\u043E\u0433\u043B\u0430\u0441\u0443\u044E\u0449\u0438\u0435
