ALF-926 Добавить новые виды документов к договору: "Протокол разногласий" и "Протокол согласования разногласий"
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2634 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/contracts_docs_filter/filter.get_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/contracts/contracts_docs_filter/filter.get_ru.properties
@@ -2,5 +2,6 @@ filter.type.ALL=\u0412\u0441\u0435
 filter.type.AGREEMENTS=\u0421\u043E\u0433\u043B\u0430\u0448\u0435\u043D\u0438\u044F
 filter.type.CHANGES=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u0438\u044F
 filter.type.TERMINATIONS=\u0420\u0430\u0441\u0442\u043E\u0440\u0436\u0435\u043D\u0438\u044F
+filter.type.CONTROVERSY=\u0420\u0430\u0437\u043D\u043E\u0433\u043B\u0430\u0441\u0438\u044F
 
 label.contracts_docs=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
