ALF-930: В справочник "Доступные типы связи" добавлен список не лоступных типов связи
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2653 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-documents_ru.properties
@@ -15,7 +15,8 @@ lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_code.
 lecm-connect-types_dictionary-connection-types.type.lecm-connect-types_available-connection-type.title=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_primary-document-type.title=\u0422\u0438\u043F \u0438\u0441\u0445\u043E\u0434\u043D\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
 lecm-connect-types_dictionary-connection-types.property.lecm-connect-types_connected-document-type.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0430\u043D\u043D\u043E\u0433\u043E \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
-lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_available-connection-types-assoc.title=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_not-available-connection-types-assoc.title=\u041D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
+lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_recommended-connection-types-assoc.title=\u0420\u0435\u043A\u043E\u043C\u0435\u043D\u0434\u0443\u0435\u043C\u044B\u0435 \u0442\u0438\u043F\u044B \u0441\u0432\u044F\u0437\u0438
 lecm-connect-types_dictionary-connection-types.association.lecm-connect-types_default-connection-type-assoc.title=\u0422\u0438\u043F \u0441\u0432\u044F\u0437\u0438 \u043F\u043E \u0443\u043C\u043E\u043B\u0447\u0430\u043D\u0438\u044E
 
 lecm-doc-members_model.type.lecm-doc-members_member.title=\u0423\u0447\u0430\u0441\u0442\u043D\u0438\u043A
