--- a/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-sequential-approval-workflow-model_ru.properties
@@ -1,5 +1,5 @@
-lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.title=\u041f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
-lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.description=\u041f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0435 \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u0435
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.title=\u0421\u0442\u0430\u0440\u0442 \u043f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0433\u043e \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
+lecmSeq_sequentialApprovalWorkflow.type.lecmSeq_sequentialApproval.description=\u0421\u0442\u0430\u0440\u0442 \u043f\u043e\u0441\u043b\u0435\u0434\u043e\u0432\u0430\u0442\u0435\u043b\u044c\u043d\u043e\u0433\u043e \u0441\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d\u0438\u044f
 lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.title=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
 lecmSeq_sequentialApprovalWorkflow.association.lecmSeq_employeesAssoc.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
 listconstraint.lecmSeq_approveTaskResultConstraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c
