1) ALF-426 5.4.5.7 Выбор сотрудника с индикатором доступности К контролу association-autocomplete-control.ftl обален параметр "employeeAbsenceMarker", который позволяет помечать отсутствующих сотрудников при выборе.
2) ALF-937 Доработка функции "Меня нет в офисе"
Добавлено поле Автоответ и флаг, включающий его использование.


git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2700 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
+++ b/lecm-calendar/repo/src/main/config/messages/calendar_ru.properties
@@ -41,6 +41,11 @@ lecm-absence_absence-model.property.lecm-absence_code.title=\u041a\u043e\u0434 \
 #<property name="lecm-absence:color">
 lecm-absence_absence-model.property.lecm-absence_color.title=\u0426\u0432\u0435\u0442 \u0434\u043b\u044f \u043e\u0431\u043e\u0437\u043d\u0430\u0447\u0435\u043d\u0438\u044f
 
+#<property name="lecm-absence:auto-answer-enabled">
+lecm-absence_absence-model.property.lecm-absence_auto-answer-enabled.title=\u0412\u043a\u043b\u044e\u0447\u0438\u0442\u044c \u0430\u0432\u0442\u043e\u043e\u0442\u0432\u0435\u0442
+#<property name="lecm-absence:auto-answer-text">
+lecm-absence_absence-model.property.lecm-absence_auto-answer-text.title=\u0422\u0435\u043a\u0441\u0442 \u0430\u0432\u0442\u043e\u043e\u0442\u0432\u0435\u0442\u0430
+
 #<model name="lecm-sched:schedule-model"
 lecm-sched_schedule-model.title=\u0413\u0440\u0430\u0444\u0438\u043a \u0440\u0430\u0431\u043e\u0442\u044b
 #<type name="lecm-sched:schedule">
