--- a/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake_ru.properties
+++ b/lecm-contracts-fake/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts-fake/contracts-fake_ru.properties
@@ -2,3 +2,9 @@ page.contracts.fake.title=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake
 page.contracts.fake.filter.label=(\u0441\u043E\u0434\u0435\u0440\u0436\u0438\u043C\u043E\u0435 \u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 header.contracts.fake.label=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake)
 header.contracts.fake.description=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake)
+
+page.lecm-contract-fake_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake)
+button.lecm-contract-fake_document.new=\u041D\u043E\u0432\u044B\u0439 \u0414\u043E\u0433\u043E\u0432\u043E\u0440 (Fake)
+label.create-lecm-contract-fake_document=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0414\u043E\u0433\u043E\u0432\u043E\u0440 (Fake)
+label.filter-lecm-contract-fake_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430 (Fake)
+
