--- a/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-additional-document-model_ru.properties
@@ -1,5 +1,5 @@
-lecm-additional-document_model.lecm-additional-document_additionalDocumen.title=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
-lecm-additional-document_model.lecm-additional-document_additionalDocumen.description=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+lecm-additional-document_model.type.lecm-additional-document_additionalDocument.title=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
+lecm-additional-document_model.type.lecm-additional-document_additionalDocument.description=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0443
 lecm-additional-document_model.property.cm_name.title=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 lecm-additional-document_model.property.cm_name.description=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435
 lecm-additional-document_model.property.lecm-additional-document_number.title=\u041D\u043E\u043C\u0435\u0440 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u0430
