--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
@@ -1,5 +1,5 @@
 #<type name="lecm-contract-reports:contracts-list-report">
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=\u041f\u0435\u0440\u043e\u0438\u0434 \u043d\u0430\u0447\u0430\u043b\u0430 \u0441
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-after.title=\u041f\u0435\u0440\u0438\u043e\u0434 \u043d\u0430\u0447\u0430\u043b\u0430 \u0441
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-start-before.title=\u041f\u043e
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-after.title=\u041f\u0435\u0440\u0438\u043e\u0434 \u043e\u043a\u043e\u043d\u0447\u0430\u043d\u0438\u044f \u0441
@@ -14,4 +14,12 @@ lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-start.title=\u041d\u0430\u0447\u0430\u043b\u043e \u043e\u0442\u0447\u0435\u0442\u0430
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-discipline-end.title=\u041a\u043e\u043d\u0435\u0446 \u043e\u0442\u0447\u0435\u0442\u0430
+
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-after.title=\u0414\u0430\u0442\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438 \u0441
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-before.title=\u041f\u043e
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-report-type.title=\u0418\u0437\u043c\u0435\u0440\u0435\u043d\u0438\u0435
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-type.title=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-subject.title=\u0422\u0435\u043c\u0430\u0442\u0438\u043a\u0430 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+
 
