--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/forms/document.forms.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/forms/document.forms.get_ru.properties
@@ -3,3 +3,4 @@ label.expand=\u0420\u0430\u0437\u0432\u0435\u0440\u043d\u0443\u0442\u044c
 label.members.more=\u0415\u0449\u0451
 form.simple=Simple
 form.dossier=\u0414\u043e\u0441\u044c\u0435 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
+form.contractDelta=\u0418\u0437\u043c\u0435\u043d\u0435\u043d\u0438\u044f \u043a \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0443
