--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
@@ -20,3 +20,9 @@ logicecm.base.message.enter-search-text=\u0412\u0432\u0435\u0434\u0438\u0442\u04
 contract.daterange=\u041F\u0435\u0440\u0438\u043E\u0434 \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u044F
 lecm.form.upload= \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C
 dialog.createNew.title=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
+
+form.control.date-picker.entry.date.format=dd.MM.yyyy
+form.control.date-picker.display.date.format=DD.MM.YYYY
+
+form.control.date-picker.entry.time.format=HH\:mm
+form.control.date-picker.display.time.format=\u0427\u0427\:\u041C\u041C (24 \u0427\u0430\u0441\u0430)
