--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
@@ -21,6 +21,8 @@ contract.daterange=\u041F\u0435\u0440\u0438\u043E\u0434 \u0434\u0435\u0439\u0441
 lecm.form.upload= \u0417\u0430\u0433\u0440\u0443\u0437\u0438\u0442\u044C
 dialog.createNew.title=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
 
+message.upload.not-loaded=\u0424\u043E\u0442\u043E\u0433\u0440\u0430\u0444\u0438\u044F \u043D\u0435 \u0437\u0430\u0433\u0440\u0443\u0436\u0435\u043D\u0430dialog.createNew.title=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u043D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u043D\u0442
+
 form.control.date-picker.entry.date.format=dd.MM.yyyy
 form.control.date-picker.display.date.format=DD.MM.YYYY
 
