--- a/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
+++ b/lecm-contracts/share/src/main/resources/alfresco/web-extension/ru/it/lecm/contracts/contracts_ru.properties
@@ -42,7 +42,7 @@ lecm-additional-document_contractType=\u0412\u0438\u0434 \u0434\u043E\u0433\u043
 contracts.report.contracts-list.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u0440\u0435\u0435\u0441\u0442\u0440\u0443 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u043E\u0432
 contracts.report.approval-discipline.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u043E\u0439 \u0434\u0438\u0441\u0446\u0438\u043F\u043B\u0438\u043D\u0435 \u043F\u043E \u0441\u043E\u0433\u043B\u0430\u0441\u043E\u0432\u0430\u043D\u0438\u044F\u043C
 contracts.report.docflow-timings.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u0441\u0440\u043E\u043A\u0430\u043C \u043F\u0440\u043E\u0445\u043E\u0436\u0434\u0435\u043D\u0438\u044F \u043C\u0430\u0440\u0448\u0440\u0443\u0442\u0430
-contracts.report.docflow-counters.title=\u0421\u0432\u043e\u0434\u043d\u044b\u0439 \u043e\u0442\u0447\u0435\u0442 \u043f\u043e \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430\u043c
+contracts.report.docflow-counters.title=\u0421\u0432\u043E\u0434\u043D\u044B\u0439 \u043E\u0442\u0447\u0435\u0442 \u043F\u043E \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
 contracts.report.success=\u041E\u0442\u0447\u0435\u0442 \u0441\u0444\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u043D \u0443\u0441\u043F\u0435\u0448\u043D\u043E
 contracts.report.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u0444\u043E\u0440\u043C\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F \u043E\u0442\u0447\u0435\u0442\u0430
 contract.contractTime.unlimited=\u0411\u0435\u0441\u0441\u0440\u043E\u0447\u043D\u044B\u0439
@@ -51,8 +51,8 @@ ru.it.contracts.signContractor=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\
 ru.it.contract.executed=\u041F\u043E\u0434\u0442\u0432\u0435\u0440\u0434\u0438\u0442\u0435 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430.
 
 page.lecm-contract_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
-button.lecm-contract_document.new=\u041D\u043E\u0432\u044B\u0439 \u0414\u043E\u0433\u043E\u0432\u043E\u0440
-label.create-lecm-contract_document=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0414\u043E\u0433\u043E\u0432\u043E\u0440
+button.lecm-contract_document.new=\u041D\u043E\u0432\u044B\u0439 \u0434\u043E\u0433\u043E\u0432\u043E\u0440
+label.create-lecm-contract_document=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u0434\u043E\u0433\u043E\u0432\u043E\u0440
 label.filter-lecm-contract_document=\u0414\u043E\u0433\u043E\u0432\u043E\u0440\u0430
 
 page.lecm-additional-document_additionalDocument=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B \u043A \u0434\u043E\u0433\u043E\u0432\u043E\u0440\u0430\u043C
