--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/documents-list/filter/filter.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/documents-list/filter/filter.get_ru.properties
@@ -1,2 +1,2 @@
 label.documents=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442\u044B
-label.byStatus=\u041F\u043E \u0441\u0442\u0430\u0442\u0443\u0441\u0430\u043C
+label.byStatus=\u0421\u0442\u0430\u0442\u0443\u0441\u044B
