ALF-1060 Некорректное название атрибута ALF-1061 Некорректное название атрибута
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2895 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form_ru.properties
+++ b/lecm-orgstructure/share/src/main/resources/alfresco/web-extension/ru/it/lecm/orgstructure/form_ru.properties
@@ -71,3 +71,6 @@ lecm-validation-number-uniqueness-help-id=\u041F\u043E\u043B\u0435 \u043C\u043E\
 lecm-validation-uniqueness-help-id=\u041F\u043E\u043B\u0435 \u0434\u043E\u043B\u0436\u043D\u043E \u0431\u044B\u0442\u044C \u0443\u043D\u0438\u043A\u0430\u043B\u044C\u043D\u044B\u043C
 
 lecm-orgstr_organization-boss=\u0420\u0443\u043A\u043E\u0432\u043E\u0434\u0438\u0442\u0435\u043B\u044C
+
+lecm-orgstr_staffPosition-name=\u041D\u0430\u0438\u043C\u0435\u043D\u043E\u0432\u0430\u043D\u0438\u0435 \u0434\u043E\u043B\u0436\u043D\u043E\u0441\u0442\u0438
+lecm-orgstr_workRole-name=\u041D\u0430\u0437\u0432\u0430\u043D\u0438\u0435 \u0440\u043E\u043B\u0438
