--- a/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
+++ b/lecm-dictionary/repo/src/main/config/messages/dictionary_ru.properties
@@ -8,3 +8,10 @@ lecm-dic_dictionaryStructure.property.lecm-dic_active.description=\u0410\u043A\u
 lecm-currency_model.type.lecm-currency_currency.title=\u0412\u0430\u043B\u044E\u0442\u044B
 lecm-currency_model.property.lecm-currency_alphabetic-code.title=\u0422\u0440\u0435\u0445\u0431\u0443\u043A\u0432\u0435\u043D\u043D\u044B\u0439 \u0430\u043B\u0444\u0430\u0432\u0438\u0442\u043D\u044B\u0439 \u043A\u043E\u0434 \u0432\u0430\u043B\u044E\u0442\u044B
 lecm-currency_model.property.lecm-currency_digital-code.title=\u0422\u0440\u0435\u0445\u0437\u043D\u0430\u0447\u043D\u044B\u0439 \u0446\u0438\u0444\u0440\u043E\u0432\u043E\u0439 \u043A\u043E\u0434 \u0432\u0430\u043B\u044E\u0442\u044B
+
+lecm-dic_dictionaryStructure.property.lecm-dic_attributeForShow.title=\u0421\u0441\u044B\u043B\u043A\u0430
+lecm-dic_dictionaryStructure.property.lecm-dic_attributeForShow.description=\u0421\u0441\u044B\u043B\u043A\u0430
+lecm-dic_dictionaryStructure.property.lecm-dic_plane.title=\u041F\u043B\u043E\u0441\u043A\u0438\u0439
+lecm-dic_dictionaryStructure.property.lecm-dic_plane.description=\u041F\u043B\u043E\u0441\u043A\u0438\u0439
+lecm-dic_dictionaryStructure.property.lecm-dic_type.title=\u0422\u0438\u043F
+lecm-dic_dictionaryStructure.property.lecm-dic_type.description=\u0422\u0438\u043F
