ALF-1083, ALF-1090: Переписан экспорт в CSV
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@2945 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/datagrid/datagrid.get_ru.properties
@@ -50,3 +50,5 @@ button.clear=\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C
 label.keywords=\u041A\u043B\u044E\u0447\u0435\u0432\u044B\u0435 \u0441\u043B\u043E\u0432\u0430
 
 logicecm.dictionary.view=\u041F\u0440\u043E\u0441\u043C\u043E\u0442\u0440
+
+message.export.csv.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u044D\u043A\u0441\u043F\u043E\u0440\u0442\u0430
