--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -52,3 +52,6 @@ lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=\u041F\u0440\u0
 lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=\u0417\u0430\u0432\u0435\u0440\u0448\u0430\u0442\u044C \u0440\u0430\u043D\u0435\u0435 \u043D\u0430\u0447\u0430\u0442\u044B\u0435 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u044B
 lecm-stmeditor_model.property.lecm-stmeditor_hideAction.title=\u0421\u043A\u0440\u044B\u0432\u0430\u0442\u044C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435, \u0435\u0441\u043B\u0438 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolderAdditional.title=\u0410\u0440\u0445\u0438\u0432\u043D\u0430\u044F \u043F\u0430\u043F\u043A\u0430 (\u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u043E)
+lecm-stmeditor_model.property.lecm-stmeditor_version.title=\u0412\u0435\u0440\u0441\u0438\u044F
+lecm-stmeditor_model.property.lecm-stmeditor_publishDate.title=\u041E\u043F\u0443\u0431\u043B\u0438\u043A\u043E\u0432\u0430\u043D\u043E
+lecm-stmeditor_model.property.lecm-stmeditor_publishComment.title=\u041F\u0440\u0438\u043C\u0435\u0447\u0430\u043D\u0438\u044F
