--- a/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor_ru.properties
+++ b/lecm-statemachine-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/statemachine-editor/editor_ru.properties
@@ -35,3 +35,4 @@ import.error=\u041F\u0440\u043E\u0438\u0437\u043E\u0448\u043B\u0430 \u043E\u0448
 statemachine.editor.form.label.conditionAccessField=\u0423\u0441\u043B\u043E\u0432\u0438\u044F \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E\u0441\u0442\u0438
 statemachine.editor.form.label.statusFields=\u041F\u043E\u043B\u044F \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u0434\u043B\u044F \u0440\u0435\u0434\u0430\u043A\u0442\u0438\u0440\u043E\u0432\u0430\u043D\u0438\u044F
 statemachine.editor.form.label.attacmentCategories=\u0414\u043E\u0441\u0442\u0443\u043F\u043D\u044B\u0435 \u043A\u0430\u0442\u0435\u0433\u043E\u0440\u0438\u0438 \u0432\u043B\u043E\u0436\u0435\u043D\u0438\u0439
+statemachine.editor.form.label.versions=\u0412\u0435\u0440\u0441\u0438\u0438
