--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -49,8 +49,8 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=\u041E\u0442\u0447
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.description=\u043E\u043F\u0438\u0441\u0430\u0442\u0435\u043B\u044C \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.title=\u041A\u043E\u0434
 lecm-rpeditor_model.property.lecm-rpeditor_reportCode.description=\u041A\u043E\u0434 \u043E\u0442\u0447\u0435\u0442\u0430
-lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043E\u0434\u043D\u043E\u043C\u0443 \u043E\u0431\u044A\u0435\u043A\u0442\u0443 \u0438\u043B\u0438 \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438?
-lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043E\u0434\u043D\u043E\u043C\u0443 \u043E\u0431\u044A\u0435\u043A\u0442\u0443 \u0438\u043B\u0438 \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438?
+lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.title=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
+lecm-rpeditor_model.property.lecm-rpeditor_reportObjectsMultiplicity.description=\u041E\u0442\u0447\u0435\u0442 \u043F\u043E \u043A\u043E\u043B\u043B\u0435\u043A\u0446\u0438\u0438
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.title=\u0422\u0435\u043A\u0441\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
 lecm-rpeditor_model.property.lecm-rpeditor_reportQuery.description=\u0422\u0435\u043A\u0441\u0442 \u0437\u0430\u043F\u0440\u043E\u0441\u0430
 lecm-rpeditor_model.property.lecm-rpeditor_reportQueryOffset.title=QueryOffset
