--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
@@ -15,3 +15,6 @@ page.lecm.reports-editor.edit-template=\u0420\u0435\u0434\u0430\u043A\u0442\u043
 
 label.new-template.btn=\u041D\u043E\u0432\u044B\u0439 \u0428\u0430\u0431\u043B\u043E\u043D
 label.create-template.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u0448\u0430\u0431\u043B\u043E\u043D\u0430
+
+header.reports-editor.label=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
+header.reports-editor.description=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
