--- a/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
+++ b/lecm-statemachine-editor/repo/src/main/config/messages/lecm-statemachine-model_ru.properties
@@ -29,6 +29,7 @@ lecm-stmeditor_model.property.lecm-stmeditor_startScriptAction.title=\u0418\u044
 lecm-stmeditor_model.property.lecm-stmeditor_endStartWorkflow.title=\u0417\u0430\u043F\u0443\u0441\u043A \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u0430 \u043F\u0440\u0438 \u0432\u044B\u0445\u043E\u0434\u0435 \u0438\u0437 \u0441\u0442\u0430\u0442\u0443\u0441\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_endScriptAction.title=\u0418\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0441\u043A\u0440\u0438\u043F\u0442\u0430 \u043F\u0440\u0438 \u0432\u044B\u0445\u043E\u0434\u0435 \u0438\u0437 \u0441\u0442\u0430\u0442\u0443\u0441\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_endEventScriptAction.title=\u0418\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0435 \u0441\u043A\u0440\u0438\u043F\u0442\u0430 \u043F\u0440\u0438 \u0432\u044B\u0445\u043E\u0434\u0435 \u0438\u0437 \u0441\u0442\u0430\u0442\u0443\u0441\u0430
+lecm-stmeditor_model.property.lecm-stmeditor_startTimerAction.title=\u0422\u0430\u0439\u043C\u0430\u0443\u0442
 lecm-stmeditor_model.property.lecm-stmeditor_scriptLabel.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 lecm-stmeditor_model.property.lecm-stmeditor_actionScript.title=\u0421\u043A\u0440\u0438\u043F\u0442
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolder.title=\u0410\u0440\u0445\u0438\u0432\u043D\u0430\u044F \u043F\u0430\u043F\u043A\u0430
@@ -48,7 +49,7 @@ listconstraint.lecm-stmeditor_fromTypeList.VALUE=\u0417\u043D\u0430\u0447\u0435\
 lecm-stmeditor_model.property.lecm-stmeditor_conditionAccess.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u0430
 lecm-stmeditor_model.property.lecm-stmeditor_condition.title=\u0423\u0441\u043B\u043E\u0432\u0438\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E\u0441\u0442\u0438
 lecm-stmeditor_model.property.lecm-stmeditor_conditionErrorMessage.title=\u0421\u043E\u043E\u0431\u0449\u0435\u043D\u0438\u0435 \u043E\u0431 \u043E\u0448\u0438\u0431\u043A\u0435
-lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=\u041F\u0440\u043E\u0434\u043E\u043B\u0436\u0438\u0442\u0435\u043B\u044C\u043D\u043E\u0441\u0442\u044C
+lecm-stmeditor_model.property.lecm-stmeditor_timerDuration.title=\u0422\u0430\u0439\u043C\u0430\u0443\u0442
 lecm-stmeditor_model.property.lecm-stmeditor_stopSubWorkflows.title=\u0417\u0430\u0432\u0435\u0440\u0448\u0430\u0442\u044C \u0440\u0430\u043D\u0435\u0435 \u043D\u0430\u0447\u0430\u0442\u044B\u0435 \u043F\u0440\u043E\u0446\u0435\u0441\u0441\u044B
 lecm-stmeditor_model.property.lecm-stmeditor_hideAction.title=\u0421\u043A\u0440\u044B\u0432\u0430\u0442\u044C \u0434\u0435\u0439\u0441\u0442\u0432\u0438\u0435, \u0435\u0441\u043B\u0438 \u043D\u0435 \u0434\u043E\u0441\u0442\u0443\u043F\u043D\u043E
 lecm-stmeditor_model.property.lecm-stmeditor_archiveFolderAdditional.title=\u0410\u0440\u0445\u0438\u0432\u043D\u0430\u044F \u043F\u0430\u043F\u043A\u0430 (\u0414\u043E\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C\u043D\u043E)
