--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -38,11 +38,13 @@ lecm-rpeditor_model.property.lecm-rpeditor_dataSourceCode.description=\u041A\u04
 
 lecm-rpeditor_model.type.lecm-rpeditor_dataColumn.title=\u041F\u043E\u043B\u0435-\u043A\u043E\u043B\u043E\u043D\u043A\u0430
 lecm-rpeditor_model.type.lecm-rpeditor_dataColumn.description=\u041F\u043E\u043B\u0435-\u043A\u043E\u043B\u043E\u043D\u043A\u0430
-lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCod.title=\u041A\u043E\u0434
-lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCod.description=\u041A\u043E\u0434 \u041F\u043E\u043B\u044F-\u043A\u043E\u043B\u043E\u043D\u043A\u0438
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.title=\u041A\u043E\u043B\u043E\u043D\u043A\u0430 \u0432 \u043E\u0442\u0447\u0435\u0442\u0435
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnCode.description=\u041A\u043E\u043B\u043E\u043D\u043A\u0430 \u0432 \u043E\u0442\u0447\u0435\u0442\u0435
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.title=\u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u0435
+lecm-rpeditor_model.property.lecm-rpeditor_dataColumnExpression.description=\u0412\u044B\u0440\u0430\u0436\u0435\u043D\u0438\u0435
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.title=\u0422\u0438\u043F
 lecm-rpeditor_model.association.lecm-rpeditor_columnTypeAssoc.description=\u0422\u0438\u043F \u041F\u043E\u043B\u044F-\u043A\u043E\u043B\u043E\u043D\u043A\u0438\u0430
-lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.title=\u0422\u0438\u043F \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u0430
+lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.title=\u041F\u0430\u0440\u0430\u043C\u0435\u0442\u0440
 lecm-rpeditor_model.association.lecm-rpeditor_columnParameterTypeAssoc.description=\u0422\u0438\u043F \u043F\u0430\u0440\u0430\u043C\u0435\u0442\u0440\u0430 \u041F\u043E\u043B\u044F-\u043A\u043E\u043B\u043E\u043D\u043A\u0438
 
 lecm-rpeditor_model.type.lecm-rpeditor_reportDescriptor.title=\u041E\u0442\u0447\u0435\u0442
