--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
@@ -25,7 +25,10 @@ label.new-provider.btn=\u041D\u043E\u0432\u044B\u0439 \u041F\u0440\u043E\u0432\u
 label.create-provider.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043F\u0440\u043E\u0432\u0430\u0439\u0434\u0435\u0440\u0430
 label.new-report-type.btn=\u041D\u043E\u0432\u044B\u0439 \u0422\u0438\u043F \u041E\u0442\u0447\u0435\u0442\u043E\u0432
 label.create-report-type.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043D\u043E\u0432\u043E\u0433\u043E \u0442\u0438\u043F\u0430
-
+label.new-source.btn=\u041D\u043E\u0432\u044B\u0439 \u041D\u0430\u0431\u043E\u0440 \u0414\u0430\u043D\u043D\u044B\u0445
+label.create-source.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043D\u0430\u0431\u043E\u0440\u0430
+label.new-source-column.btn=\u041D\u043E\u0432\u044B\u0439 \u043A\u043E\u043B\u043E\u043D\u043A\u0430 \u0432 \u043D\u0430\u0431\u043E\u0440\u0435
+label.create-source-column.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043A\u043E\u043B\u043E\u043D\u043A\u0438
 
 header.reports-editor.label=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
 header.reports-editor.description=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
