ALF-1116 Настройка типа и шаблона
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3068 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
+++ b/lecm-reports-editor/repo/src/main/config/messages/reports-editor_ru.properties
@@ -30,6 +30,8 @@ lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.title=\u0428\u0430\u0431\u
 lecm-rpeditor_model.type.lecm-rpeditor_reportTemplate.description=\u0428\u0430\u0431\u043B\u043E\u043D \u043E\u0442\u0447\u0435\u0442\u0430
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.title=\u0424\u0430\u0439\u043B
 lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateFile.description=\u0424\u0430\u0439\u043B \u043E\u0442\u0447\u0435\u0442\u0430
+lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.title=\u0422\u0438\u043F
+lecm-rpeditor_model.association.lecm-rpeditor_reportTemplateType.description=\u0422\u0438\u043F
 
 lecm-rpeditor_model.type.lecm-rpeditor_dataSource.title=\u041D\u0430\u0431\u043E\u0440 \u0434\u0430\u043D\u043D\u044B\u0445
 lecm-rpeditor_model.type.lecm-rpeditor_dataSource.description=\u041D\u0430\u0431\u043E\u0440 \u0434\u0430\u043D\u043D\u044B\u0445
