--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/header/document.attachment.header.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components-attacmnets/header/document.attachment.header.get_ru.properties
@@ -1,2 +1,3 @@
 banner.not-found=\u0414\u043E\u043A\u0443\u043C\u0435\u043D\u0442 \u043D\u0435 \u043D\u0430\u0439\u0434\u0435\u043D. \u041E\u043D \u043C\u043E\u0433 \u0431\u044B\u0442\u044C \u0443\u0434\u0430\u043B\u0435\u043D.
-label.modified-by-user-on-date=\u0418\u0437\u043C\u0435\u043D\u0438\u043B(\u0430) {0} {1}
+label.version=\u0412\u0435\u0440\u0441\u0438\u044F
+label.modified-by-user-on-date=\u0418\u0437\u043C\u0435\u043D\u0435\u043D\u043E: {0}
