--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
@@ -6,7 +6,8 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-lis
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-end-before.title=\u041f\u043e
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-actual-only.title=\u0422\u043e\u043b\u044c\u043a\u043e \u0430\u043a\u0442\u0443\u0430\u043b\u044c\u043d\u044b\u0435
-lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum.title=\u0421\u0443\u043c\u043c\u0430
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-low.title=\u0421\u0443\u043c\u043c\u0430 \u043e\u0442
+lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-up.title=\u0414\u043e
 
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-type.title=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
