[~]рефакторинг меню  Редактора Отчетов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3116 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/reports-editor/menu/reports-editor.menu.get_ru.properties
@@ -1,4 +1,5 @@
 lecm.reports-editor.reports.btn=\u041E\u0442\u0447\u0435\u0442\u044B
+lecm.reports-editor.report-info.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u041E\u0442\u0447\u0435\u0442\u0430
 lecm.reports-editor.addSource.btn=\u0412\u044B\u0431\u043E\u0440 \u041D\u0430\u0431\u043E\u0440 \u0414\u0430\u043D\u043D\u044B\u0445
 lecm.reports-editor.editSource.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u041D\u0430\u0431\u043E\u0440\u0430 \u0414\u0430\u043D\u043D\u044B\u0445
 lecm.reports-editor.editTemplate.btn=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0430 \u0448\u0430\u0431\u043B\u043E\u043D\u0430
