[ALF-1193]Отчёты с фильтром по контрагентам теперь допускают множественный выбор
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3119 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-reports-form-model_ru.properties
@@ -9,7 +9,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-lis
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-low.title=\u0421\u0443\u043c\u043c\u0430 \u043e\u0442
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_contracts-list-sum-up.title=\u0414\u043e
 
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442(\u044b)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-type.title=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_contracts-list-contract-subject.title=\u0422\u0435\u043c\u0430\u0442\u0438\u043a\u0430 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 
@@ -21,7 +21,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_approval-disc
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-after.title=\u0414\u0430\u0442\u0430 \u0440\u0435\u0433\u0438\u0441\u0442\u0440\u0430\u0446\u0438\u0438 \u0441
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-reg-before.title=\u041f\u043e
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dft-report-type.title=\u0418\u0437\u043c\u0435\u0440\u0435\u043d\u0438\u0435
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442(\u044b)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-type.title=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dft-contract-subject.title=\u0422\u0435\u043c\u0430\u0442\u0438\u043a\u0430 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 
@@ -38,7 +38,7 @@ lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-sum-up.ti
 
 lecm-contract-reports_reports-forms.property.lecm-contract-reports_dfc-report-type.title=\u0418\u0437\u043c\u0435\u0440\u0435\u043d\u0438\u0435
 
-lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442
+lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contractor.title=\u041a\u043e\u043d\u0442\u0440\u0430\u0433\u0435\u043d\u0442(\u044b)
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-type.title=\u0412\u0438\u0434 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-subject.title=\u0422\u0435\u043c\u0430\u0442\u0438\u043a\u0430 \u0434\u043e\u0433\u043e\u0432\u043e\u0440\u0430
 lecm-contract-reports_reports-forms.association.lecm-contract-reports_dfc-contract-initiator.title=\u0418\u043d\u0438\u0446\u0438\u0430\u0442\u043e\u0440
