--- a/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get_ru.properties
+++ b/lecm-dictionary/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/dictionary/toolbar/toolbar.get_ru.properties
@@ -2,6 +2,7 @@ button.new-row=\u041D\u043E\u0432\u044B\u0439 \u044D\u043B\u0435\u043C\u0435\u04
 button.print=\u041F\u0435\u0447\u0430\u0442\u044C
 button.rss-feed=\u041B\u0435\u043D\u0442\u0430 RSS
 button.search=\u041F\u043E\u0438\u0441\u043A
+button.ex_search=\u0410\u0442\u0442\u0440\u0438\u0431\u0443\u0442\u0438\u0432\u043D\u044B\u0439 \u043F\u043E\u0438\u0441\u043A
 button.export-xml=\u042D\u043A\u0441\u043F\u043E\u0440\u0442 XML
 button.import-xml=\u0418\u043C\u043F\u043E\u0440\u0442 XML
 button.export-csv=\u042D\u043A\u0441\u043F\u043E\u0440\u0442 CSV
