[~] переписанный интерфейс для Выбора/Настройки Набора Данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3161 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
+++ b/lecm-reports-editor/share/src/main/resources/alfresco/web-extension/ru/it/lecm/reports-editor/form_ru.properties
@@ -30,6 +30,9 @@ label.new-source.btn=\u041D\u043E\u0432\u044B\u0439 \u041D\u0430\u0431\u043E\u04
 label.create-source.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043D\u0430\u0431\u043E\u0440\u0430
 label.new-source-column.btn=\u041D\u043E\u0432\u044B\u0439 \u043A\u043E\u043B\u043E\u043D\u043A\u0430 \u0432 \u043D\u0430\u0431\u043E\u0440\u0435
 label.create-source-column.title=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043A\u043E\u043B\u043E\u043D\u043A\u0438
+label.select-source.btn=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0438\u0437 \u0428\u0430\u0431\u043B\u043E\u043D\u0430
+label.select-source.title=\u0412\u044B\u0431\u0440\u0430\u0442\u044C \u0438\u0437 \u0428\u0430\u0431\u043B\u043E\u043D\u0430
+label.select.btn=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0432 \u043D\u0430\u0431\u043E\u0440
 
 header.reports-editor.label=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
 header.reports-editor.description=\u0420\u0435\u0434\u0430\u043A\u0442\u043E\u0440 \u043E\u0442\u0447\u0435\u0442\u043E\u0432
