--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -1,8 +1,38 @@
 lecm-errands_model.type.lecm-errands_document.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 lecm-errands_model.type.lecm-errands_document.description=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 
+lecm-errands_model.property.lecm-errands_title.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
+lecm-errands_model.property.lecm-errands_title.description=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 lecm-errands_model.property.lecm-errands_number.title=\u041D\u043E\u043C\u0435\u0440 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 lecm-errands_model.property.lecm-errands_number.description=\u041D\u043E\u043C\u0435\u0440 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_content.title=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+lecm-errands_model.property.lecm-errands_content.description=\u0421\u043E\u0434\u0435\u0440\u0436\u0430\u043D\u0438\u0435
+lecm-errands_model.property.lecm-errands_is-important.title=\u0412\u0430\u0436\u043D\u043E\u0441\u0442\u044C
+lecm-errands_model.property.lecm-errands_is-important.description=\u0412\u0430\u0436\u043D\u043E\u0441\u0442\u044C
+lecm-errands_model.property.lecm-errands_limitation-date.title=\u0421\u0440\u043E\u043A \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_limitation-date.description=\u0421\u0440\u043E\u043A \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_start-date.title=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
+lecm-errands_model.property.lecm-errands_start-date.description=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430
+lecm-errands_model.property.lecm-errands_just-in-time.title=\u0422\u043E\u0447\u043D\u043E \u0432 \u0441\u0440\u043E\u043A
+lecm-errands_model.property.lecm-errands_just-in-time.description=\u0422\u043E\u0447\u043D\u043E \u0432 \u0441\u0440\u043E\u043A
+lecm-errands_model.property.lecm-errands_without-initiator-approval.title=\u0411\u0435\u0437 \u0443\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u044F \u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440\u043E\u043C
+lecm-errands_model.property.lecm-errands_without-initiator-approval.description=\u0411\u0435\u0437 \u0443\u0442\u0432\u0435\u0440\u0436\u0434\u0435\u043D\u0438\u044F \u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440\u043E\u043C
+lecm-errands_model.property.lecm-errands_end-date.title=\u0414\u0430\u0442\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_end-date.description=\u0414\u0430\u0442\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_execution-report.title=\u041E\u0442\u0447\u0435\u0442 \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438
+lecm-errands_model.property.lecm-errands_execution-report.description=\u041E\u0442\u0447\u0435\u0442 \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438
+lecm-errands_model.property.lecm-errands_execution-date.title=\u0414\u0430\u0442\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_execution-date.description=\u0414\u0430\u0442\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
+lecm-errands_model.property.lecm-errands_is-expired.title=\u041F\u0440\u043E\u0441\u0440\u043E\u0447\u0435\u043D\u043E
+lecm-errands_model.property.lecm-errands_is-expired.description=\u041F\u0440\u043E\u0441\u0440\u043E\u0447\u0435\u043D\u043E
+lecm-errands_model.property.lecm-errands_is-short.title=\u041A\u043E\u0440\u043E\u0442\u043A\u043E\u0435
+lecm-errands_model.property.lecm-errands_is-short.description=\u041A\u043E\u0440\u043E\u0442\u043A\u043E\u0435
 
-lecm-errands_model.association.lecm-errands_initiator.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
-lecm-errands_model.association.lecm-errands_initiator.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-errands_model.association.lecm-errands_initiator-assoc.title=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-errands_model.association.lecm-errands_initiator-assoc.description=\u0418\u043D\u0438\u0446\u0438\u0430\u0442\u043E\u0440
+lecm-errands_model.association.lecm-errands_executor-assoc.title=\u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+lecm-errands_model.association.lecm-errands_executor-assoc.description=\u0418\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u044C
+lecm-errands_model.association.lecm-errands_controller-assoc.title=\u041A\u043E\u043D\u0442\u0440\u043E\u043B\u043B\u0435\u0440
+lecm-errands_model.association.lecm-errands_controller-assoc.description=\u041A\u043E\u043D\u0442\u0440\u043E\u043B\u043B\u0435\u0440
+lecm-errands_model.association.lecm-errands_coexecutors-assoc.title=\u0421\u043E\u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0438
+lecm-errands_model.association.lecm-errands_coexecutors-assoc.description=\u0421\u043E\u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0438
