--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -1,5 +1,5 @@
-lecm-errands_model.type.lecm-errands_document.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
-lecm-errands_model.type.lecm-errands_document.description=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecm-errands_model.type.lecm-errands_document.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
+lecm-errands_model.type.lecm-errands_document.description=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
 
 lecm-errands_model.property.lecm-errands_title.title=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
 lecm-errands_model.property.lecm-errands_title.description=\u0417\u0430\u0433\u043E\u043B\u043E\u0432\u043E\u043A
