ALF-1235: Глобальные настройки поручений - заготовка
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3207 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -42,3 +42,9 @@ lecm-errands_model.association.lecm-errands_subject-assoc.title=\u0422\u0435\u04
 lecm-errands_model.association.lecm-errands_subject-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
 lecm-errands_model.association.lecm-errands_execution-links-assoc.title=\u0421\u0441\u044B\u043B\u043A\u0438
 lecm-errands_model.association.lecm-errands_execution-links-assoc.description=\u0421\u0441\u044B\u043B\u043A\u0438
+
+
+lecm-errands_model.type.lecm-errands_settings.title=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+lecm-errands_model.type.lecm-errands_settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.title=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
+lecm-errands_model.property.lecm-errands_settings-mode-choosing-executors.description=\u0420\u0435\u0436\u0438\u043C \u0432\u044B\u0431\u043E\u0440\u0430 \u0438\u0441\u043F\u043E\u043B\u043D\u0438\u0442\u0435\u043B\u0435\u0439
