--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -6,3 +6,9 @@ label.filter-lecm-errands_document=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0
 page.errands.filter.label=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 
 header.errands-list.label=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+
+tool.errands-settings.label=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+tool.errands-settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
+
+label.mode-choosing.unit=\u0432 \u0440\u0430\u043C\u043A\u0430\u0445 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+label.mode-choosing.organization=\u043F\u043E \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
