--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
@@ -31,3 +31,5 @@ form.control.date-picker.display.date.format=DD.MM.YYYY
 
 form.control.date-picker.entry.time.format=HH\:mm
 form.control.date-picker.display.time.format=\u0427\u0427\:\u041C\u041C (24 \u0427\u0430\u0441\u0430)
+
+tool.group.lecm-settings=\u041B\u043E\u0433\u0438\u043A\u0430 ECM: \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
