ALF-1235: Глобальные настройки поручений - добавлены переводы
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3212 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -1,3 +1,6 @@
+listconstraint.lecm-errands_settings-mode-choosing-executors-const.ORGANIZATION=\u043F\u043E \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
+listconstraint.lecm-errands_settings-mode-choosing-executors-const.UNIT=\u0432 \u0440\u0430\u043C\u043A\u0430\u0445 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
+
 lecm-errands_model.type.lecm-errands_document.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0435
 lecm-errands_model.type.lecm-errands_document.description=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 
