ALF-1229: Добавление поручений - только drag-and-drop
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3264 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
+++ b/lecm-base/share/src/main/resources/alfresco/web-extension/ru/it/lecm/base/base-share_ru.properties
@@ -33,3 +33,4 @@ form.control.date-picker.entry.time.format=HH\:mm
 form.control.date-picker.display.time.format=\u0427\u0427\:\u041C\u041C (24 \u0427\u0430\u0441\u0430)
 
 tool.group.lecm-settings=\u041B\u043E\u0433\u0438\u043A\u0430 ECM: \u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438
+label.add-file=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0444\u0430\u0439\u043B
