--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-model_ru.properties
@@ -45,7 +45,8 @@ lecm-errands_model.association.lecm-errands_subject-assoc.title=\u0422\u0435\u04
 lecm-errands_model.association.lecm-errands_subject-assoc.description=\u0422\u0435\u043C\u0430\u0442\u0438\u043A\u0430
 lecm-errands_model.association.lecm-errands_execution-links-assoc.title=\u0421\u0441\u044B\u043B\u043A\u0438
 lecm-errands_model.association.lecm-errands_execution-links-assoc.description=\u0421\u0441\u044B\u043B\u043A\u0438
-
+lecm-errands_model.association.lecm-errands_attachments-temp-assoc.title=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+lecm-errands_model.association.lecm-errands_attachments-temp-assoc.description=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
 
 lecm-errands_model.type.lecm-errands_settings.title=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 lecm-errands_model.type.lecm-errands_settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
