--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -13,5 +13,7 @@ tool.errands-settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u04
 label.mode-choosing.unit=\u0432 \u0440\u0430\u043C\u043A\u0430\u0445 \u043F\u043E\u0434\u0440\u0430\u0437\u0434\u0435\u043B\u0435\u043D\u0438\u044F
 label.mode-choosing.organization=\u043F\u043E \u043E\u0440\u0433\u0430\u043D\u0438\u0437\u0430\u0446\u0438\u0438
 
+label.attachments=\u0412\u043B\u043E\u0436\u0435\u043D\u0438\u044F
+
 label.hide-details=\u0421\u043A\u0440\u044B\u0442\u044C \u043F\u043E\u0434\u0440\u043E\u0431\u043D\u043E\u0441\u0442\u0438
 label.show-details=\u041F\u043E\u043A\u0430\u0437\u0430\u0442\u044C \u043F\u043E\u0434\u0440\u043E\u0431\u043D\u043E\u0441\u0442\u0438
