ALF-1203: Вложения должны содержать ссылку на родительский документ даже при отображении из стандартной формы document-details
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3297 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
+++ b/lecm-documents/repo/src/main/config/messages/lecm-document-aspects-model_ru.properties
@@ -2,3 +2,5 @@ lecm-document-aspects_aspects.property.lecm-document-aspects_rating.title=\u0420
 lecm-document-aspects_aspects.property.lecm-document-aspects_rating.description=\u0420\u0435\u0439\u0442\u0438\u043D\u0433
 lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count.title=\u041F\u0440\u043E\u0433\u043E\u043B\u043E\u0441\u043E\u0432\u0430\u043B\u043E
 lecm-document-aspects_aspects.property.lecm-document-aspects_rated-persons-count.description=\u041F\u0440\u043E\u0433\u043E\u043B\u043E\u0441\u043E\u0432\u0430\u043B\u043E
+
+lecm-document-aspects_aspects.association.lecm-document-aspects_parent-document-assoc.title=\u0420\u043E\u0434\u0438\u0442\u0435\u043B\u044C\u0441\u043A\u0438\u0439 \u0434\u043E\u043A\u0443\u043C\u0435\u043D\u0442
