ALF-1219: Запросить отмену поручения.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3513 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
+++ b/lecm-errands/repo/src/main/config/messages/lecm-errands-workflow_ru.properties
@@ -12,3 +12,6 @@ lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateReason.descriptio
 
 lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.title=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
 lecmErrandWf_model.property.lecmErrandWf_changeRequestedDueDateComment.description=\u041A\u043E\u043C\u043C\u0435\u043D\u0442\u0430\u0440\u0438\u0439
+
+lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.title=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043C\u0435\u043D\u044B \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+lecmErrandWf_model.property.lecmErrandWf_requestCancelReason.description=\u041F\u0440\u0438\u0447\u0438\u043D\u0430 \u043E\u0442\u043C\u0435\u043D\u044B \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
