ALF-1246 Переработать секцию "Задачи" Базового документа в соответствии с пунктом 5.6.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3541 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/my-errands.list.get_ru.properties
+++ b/lecm-documents/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/documents/components/tasks/list/my-errands.list.get_ru.properties
@@ -1,6 +1,10 @@
 errandslist.label.my.errands=\u041C\u043E\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 errandslist.label.status=\u0421\u0442\u0430\u0442\u0443\u0441
 errandslist.label.duedate=\u0421\u0440\u043E\u043A
+errandslist.label.after=\u0421\u041A\u041E\u0420\u041E
+errandslist.label.new=\u041D\u041E\u0412\u0410\u042F
+errandslist.label.overdue=\u041F\u0420\u041E\u0421\u0420\u041E\u0427\u0415\u041D\u041E
+errandslist.label.important=\u0412\u0430\u0436\u043D\u043E\u0435
 
 errandslist.option.all=\u0412\u0441\u0435
 errandslist.option.active=\u0410\u043A\u0442\u0438\u0432\u043D\u044B\u0435
