ALF-1271: Форма поручения (главная форма) - сохранение отчёта об исполднении
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3680 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/components/form.get_ru.properties
@@ -5,3 +5,9 @@ label.links.add.title=\u0414\u043E\u0431\u0430\u0432\u043B\u0435\u043D\u0438\u04
 label.links.button=\u0414\u043E\u0431\u0430\u0432\u0438\u0442\u044C \u0441\u0441\u044B\u043B\u043A\u0443
 label.links.head=\u0421\u0441\u044B\u043B\u043A\u0438
 
+message.setExecutionReport.success=\u041E\u0442\u0447\u0435\u0442 \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0451\u043D
+message.setExecutionReport.failure=\u041E\u0448\u0438\u0431\u043A\u0430 \u043F\u0440\u0438 \u0441\u043E\u0445\u0440\u0430\u043D\u0435\u043D\u0438\u0438 \u043E\u0442\u0447\u0435\u0442\u0430 \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438
+message.errands.executionReport=\u041E\u0442\u0447\u0435\u0442 \u043E\u0431 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u0438
+message.errands.executionReport.save=\u0421\u043E\u0445\u0440\u0430\u043D\u0438\u0442\u044C
+message.errands.executionReport.clear=\u041E\u0447\u0438\u0441\u0442\u0438\u0442\u044C
+
