ALF-1271: Форма поручения (главная форма) - проверка редактируемости полей на статусе
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3794 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -3,6 +3,8 @@ button.lecm-errands_document.new=\u0421\u043E\u0437\u0434\u0430\u0442\u044C \u04
 label.create-lecm-errands_document=\u0421\u043E\u0437\u0434\u0430\u043D\u0438\u0435 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 label.filter-lecm-errands_document=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 
+field.childErrands.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F, \u0441\u043E\u0437\u0434\u0430\u043D\u043D\u044B\u0435 \u043D\u0430 \u043E\u0441\u043D\u043E\u0432\u0430\u043D\u0438\u0438
+
 page.errands.filter.label=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 
 header.errands-list.label=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
