ALF-1466 : редизайн блока фильтра в списке документов
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@3966 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/filter/filter.get_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/site-webscripts/ru/it/lecm/errands/filter/filter.get_ru.properties
@@ -1,6 +1,6 @@
 label.filter=\u0424\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u0442\u044C \u043F\u043E
-label.filter-assign=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u044E
-label.filter-date=\u0421\u0440\u043E\u043A\u0443 \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
+label.filter-assign=\u041D\u0430\u0437\u043D\u0430\u0447\u0435\u043D\u0438\u0435
+label.filter-date=\u0421\u0440\u043E\u043A \u0438\u0441\u043F\u043E\u043B\u043D\u0435\u043D\u0438\u044F
 
 filter.my=\u041C\u043E\u0438
 filter.all=\u0412\u0441\u0435
