ALF-1407 Исправлены названия статусов согласования в листе согласования.
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4086 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
+++ b/lecm-approval/repo/src/main/config/messages/lecm-approval-list_ru.properties
@@ -25,9 +25,9 @@ lecm-al_approval-list-model.association.lecm-al_approval-list-contains-approval-
 lecm-al_approval-list-model.association.lecm-al_approval-list-contains-approval-item.description=\u0421\u043e\u0433\u043b\u0430\u0441\u0443\u044e\u0449\u0438\u0435
 
 listconstraint.lecm-al_approval-item-decision-constraint.NO_DECISION=\u041d\u0435\u0442 \u0440\u0435\u0448\u0435\u043d\u0438\u044f
-listconstraint.lecm-al_approval-item-decision-constraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c
-listconstraint.lecm-al_approval-item-decision-constraint.APPROVED_WITH_REMARK=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u0442\u044c \u0441 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f\u043c\u0438
-listconstraint.lecm-al_approval-item-decision-constraint.REJECTED=\u041e\u0442\u043a\u043b\u043e\u043d\u0438\u0442\u044c
+listconstraint.lecm-al_approval-item-decision-constraint.APPROVED=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d
+listconstraint.lecm-al_approval-item-decision-constraint.APPROVED_WITH_REMARK=\u0421\u043e\u0433\u043b\u0430\u0441\u043e\u0432\u0430\u043d \u0441 \u0437\u0430\u043c\u0435\u0447\u0430\u043d\u0438\u044f\u043c\u0438
+listconstraint.lecm-al_approval-item-decision-constraint.REJECTED=\u041e\u0442\u043a\u043b\u043e\u043d\u0435\u043d
 listconstraint.lecm-al_approval-item-decision-constraint.REASSIGNED=\u041f\u0435\u0440\u0435\u043d\u0430\u0437\u043d\u0430\u0447\u0438\u0442\u044c
 
 listconstraint.lecm-al_approval-list-decision-constraint.NO_DECISION=\u041d\u0435\u0442 \u0440\u0435\u0448\u0435\u043d\u0438\u044f
