ALF-1600 При наведении на "Поручение" во всплывающем списке "Еще" указывается некорректное название модуля
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@4682 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
+++ b/lecm-errands/share/src/main/resources/alfresco/web-extension/ru/it/lecm/errands/form_ru.properties
@@ -8,6 +8,7 @@ field.childErrands.title=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F,
 page.errands.filter.label=(\u043E\u0442\u0444\u0438\u043B\u044C\u0442\u0440\u043E\u0432\u0430\u043D\u043E)
 
 header.errands-list.label=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
+header.errands-list.description=\u041F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u044F
 
 tool.errands-settings.label=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
 tool.errands-settings.description=\u041D\u0430\u0441\u0442\u0440\u043E\u0439\u043A\u0438 \u043F\u043E\u0440\u0443\u0447\u0435\u043D\u0438\u0439
