ALF-1608: Механизм подсчета формул для числовых полей (Min, Max, AVG, Total) - модели данных
git-svn-id: http://svn.datateh.ru/alfrescoecm/Business%20Platform/trunk@5040 697f8a5b-bb4b-4f4c-ab90-ff1ad96ece97

--- a/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
+++ b/lecm-contracts/repo/src/main/config/messages/lecm-contracts-table-structure-model_ru.properties
@@ -6,6 +6,8 @@ lecm-contract-table-structure_model.property.lecm-contract-table-structure_start
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_start-date.description=\u0414\u0430\u0442\u0430 \u043D\u0430\u0447\u0430\u043B\u0430 \u044D\u0442\u0430\u043F\u0430
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.title=\u0414\u0430\u0442\u0430 \u0437\u0430\u0432\u0435\u0440\u0448\u0435\u043D\u0438\u044F
 lecm-contract-table-structure_model.property.lecm-contract-table-structure_end-date.description=\u0414\u0430\u0442\u0430 \u043E\u043A\u043E\u043D\u0447\u0430\u043D\u0438\u044F \u044D\u0442\u0430\u043F\u0430
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.title=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
+lecm-contract-table-structure_model.property.lecm-contract-table-structure_stage-amount.description=\u0421\u0443\u043C\u043C\u0430 \u043F\u043E \u044D\u0442\u0430\u043F\u0443
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.title=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_status-assoc.description=\u0421\u0442\u0430\u0442\u0443\u0441
 lecm-contract-table-structure_model.association.lecm-contract-table-structure_responsible-assoc.title=\u041E\u0442\u0432\u0435\u0442\u0441\u0442\u0432\u0435\u043D\u043D\u044B\u0439
